--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "psrsjx5",
+  "name": "psrsjx6",
   "version": "2.0.0",
   "description": "",
   "scripts": {
     "start": "webpack-serve --watch --inline"
   },
   "dependencies": {
+    "eslint": "^4.19.1",
     "rxjs": "5.5.7"
   },
   "devDependencies": {
